# notification

./: Cargo.toml  LICENSE  README.md
examples/: discord_attachments.rs  discord_embed.rs  discord_flags.rs  discord_mentions.rs  discord_message.rs  discord_poll.rs  discord_thread.rs  test_discord.rs
src/: console.rs  discord.rs  email.rs  error.rs  lib.rs
